# breakwater

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  buf.yaml  release-plz.toml  taplo.toml  typos.toml
.github/workflows/: bootstrap-publish.yml  ci.yml  release-plz.yml
config/policies/: lakehouse.cedar  lakehouse.cedarschema  lakehouse.entities.json
crates/cedar-oci/: CHANGELOG.md  Cargo.toml  README.md  buf.gen.yaml
crates/datafusion-cedar/: Cargo.toml  README.md
crates/datafusion-cedar/examples/: fact_gathering_walkthrough.rs
crates/datafusion-cedar/src/: cedar.rs  cedar_entity.rs  facts.rs  govern.rs  lib.rs  policy.rs  principal.rs  rule.rs  session.rs  translate.rs  visitor.rs
crates/datafusion-cedar/tests/: fixtures_valid.rs
crates/datafusion-cedar/tests/fixtures/: demo.cedar
crates/datafusion-policy/: CHANGELOG.md  Cargo.toml  README.md
crates/datafusion-policy-cedar/: CHANGELOG.md  Cargo.toml  README.md
crates/datafusion-policy-cedar/examples/: fact_gathering_walkthrough.rs
crates/datafusion-policy-cedar/src/: cedar.rs  lib.rs  translate.rs
crates/datafusion-policy/src/: abac.rs  binding.rs  constraint.rs  engine.rs  facts.rs  function.rs  govern.rs  governance.rs  lib.rs  plan_actions.rs  principal.rs  provider.rs  rule.rs  session.rs  types.rs
crates/datafusion-policy/tests/: abac_govern.rs  neutrality.rs
docs/: handover-abac-engine.md  handover-governance-builder.md  handover-governed-tag-wiring.md  handover-secured-view-provider.md  handover-table-tag-folding.md  pluggable-policy-architecture.md  pluggable-policy-handover.md  policy-fact-gathering.md  typed-fgac-seams.md
