[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
# Intra-workspace crates: version + path so release-plz publishes to crates.io
# (version) while local builds resolve against the path.
cedar-oci = { version = "0.0.1", path = "crates/cedar-oci" }
datafusion-cedar = { version = "0.0.1", path = "crates/datafusion-cedar" }

async-trait = { version = "^0.1.89" }
cedar-local-agent = "3.0.0"
cedar-policy = { version = "4.8.2", features = ["protobufs"] }
dashmap = "6.0.1"
datafusion = "54"
datafusion-common = "54"
prost = "0.14.1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1.47", features = ["macros", "rt", "sync"] }
tonic = "0.14.1"
tonic-prost = "0.14.3"
tracing = { version = "0.1", features = ["log"] }
