[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
# Intra-workspace crates: version + path so release-plz publishes to crates.io
# (version) while local builds resolve against the path.
#
# The published artifacts carry an `olai-` prefix (open lakehouse and ai) while
# we incubate under names we can rename once community consensus is reached. The
# `package = "olai-…"` alias means the *published* crate is renamed but every
# dependent (and all Rust `use` paths) keep referring to it by the short name —
# so `use cedar_oci::…` etc. stay unchanged.
cedar-oci = { package = "olai-cedar-oci", version = "0.0.1", path = "crates/cedar-oci" }
datafusion-cedar = { package = "olai-datafusion-cedar", version = "0.0.1", path = "crates/datafusion-cedar" }
datafusion-policy = { package = "olai-datafusion-policy", version = "0.0.1", path = "crates/datafusion-policy" }

async-trait = { version = "^0.1.89" }
cedar-local-agent = "3.0.0"
cedar-policy = { version = "4.8.2", features = ["protobufs"] }
dashmap = "6.0.1"
datafusion = "54"
datafusion-common = "54"
prost = "0.14.1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1.47", features = ["macros", "rt", "sync"] }
tonic = "0.14.1"
tonic-prost = "0.14.3"
tracing = { version = "0.1", features = ["log"] }
