[package]
name = "olai-datafusion-policy-cedar"
version = "0.0.3"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Cedar policy enforcement (access gate + row/column governance) for Apache DataFusion sessions"
repository = "https://github.com/open-lakehouse/breakwater"
homepage = "https://github.com/open-lakehouse/breakwater/tree/main/crates/datafusion-policy-cedar"
documentation = "https://docs.rs/olai-datafusion-policy-cedar"
readme = "README.md"
keywords = ["datafusion", "cedar", "authorization", "governance"]
categories = ["database", "authentication"]

[dependencies]
cedar-oci = { workspace = true }
datafusion-policy = { workspace = true }

async-trait = { workspace = true }
cedar-local-agent = { workspace = true }
cedar-policy = { workspace = true }
datafusion = { workspace = true }
smol_str = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = ["fgac"]
# Layer 2 fine-grained access control (row filters + column masks) via Cedar
# type-aware partial evaluation (TPE). On by default (opt out with
# `default-features = false`); enables fgac in the neutral core, pulls the tpe
# feature through the cedar stack (which produces well-typed residuals validated
# against a schema), and smol_str for building the native-tag maps TPE partial
# entities require.
fgac = [
    "datafusion-policy/fgac",
    "cedar-policy/tpe",
    "dep:smol_str",
]
# Back-compat alias: hydrofoil (and other dependents) opt into the Layer 2
# machinery via `datafusion-policy-cedar/governance`. The feature was renamed to `fgac`
# in the neutral-core split; this alias keeps dependents' feature maps working.
governance = ["fgac"]

[dev-dependencies]
smol_str = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

# End-to-end fact-gathering & policy-evaluation walkthrough (docs/policy-fact-gathering.md).
# Needs `fgac` for the partial-eval (residual) decision point.
[[example]]
name = "fact_gathering_walkthrough"
required-features = ["fgac"]
