[package]
name = "olai-datafusion-policy"
version = "0.0.3"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Engine-neutral policy enforcement (access gate + row/column governance) for Apache DataFusion sessions"
repository = "https://github.com/open-lakehouse/breakwater"
homepage = "https://github.com/open-lakehouse/breakwater/tree/main/crates/datafusion-policy"
documentation = "https://docs.rs/olai-datafusion-policy"
readme = "README.md"
keywords = ["datafusion", "authorization", "governance", "policy"]
categories = ["database", "authentication"]

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = ["fgac"]
# Layer 2 fine-grained access control (row filters + column masks) + the
# agent-tool PEP. On by default; opt out with `default-features = false` for a
# coarse-gate-only build.
fgac = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
